--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 body {
-  margin: 0;
+  /* background-color: #E94FA2; */
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  box-sizing: border-box;
+  font-family: sans-serif;
+  /* height: 100vh; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.main {
+  display: flex;
+  justify-content: space-around;
 }
