working project on my development machine

--- a/src/Header.css
+++ b/src/Header.css
@@ -8,6 +8,15 @@ header {
 }
 
 header h1 {
+  margin: 0;
   padding: 1rem;
-  font-size: 2rem;
+  font-size: 1.3rem; /* use 2 rem when above ~ 800px wide with media query */
+  text-align: center; /* remove center alignment for larger screen */
+}
+
+@media only screen and (min-width: 53em) {
+  header h1 {
+    font-size: 2rem;
+    /* text-align: left; */
+  }
 }
