--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,132 @@
-body {
-  /* background-color: #E94FA2; */
-  padding: 0;
-  margin: 0;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
+* {
+  /* padding: 0; */
+  /* margin: 0; */
   box-sizing: border-box;
+}
+
+body {
   font-family: sans-serif;
-  /* height: 100vh; */
+  margin: 0;
+}
+
+h5 {
+  font-size: 0.9rem;
+  margin: 0;
+  text-align: center;
+  border: solid 1px lightgrey;
+  padding: 0.5rem 0;
 }
 
 .main {
+  padding: 1rem;
+  margin: 0 auto;
   display: flex;
+  flex-direction: column;
+}
+
+textarea {
+  margin: 0 0 2rem 0;
+  width: 100%;
+  height: 40vh;
+  font-size: 0.75rem;
+}
+
+.main p,
+.main ol {
+  font-size: 0.8rem;
+}
+
+.main code,
+.main pre {
+  background-color: lightgrey;
+  font-size: 0.570rem;
+}
+
+.main pre {
+  margin: 0 0.5rem 0 1rem;
+}
+
+.main blockquote p {
+  border-left: 0.5rem solid lightgrey;
+  padding-left: 0.5rem;
+  font-size: 1.1rem;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+  height: 100px;
+}
+
+@media only screen and (min-width: 24em) {
+  .main code,
+  .main pre {
+    font-size: 0.67rem;
+  }
+}
+
+@media only screen and (min-width: 32em) {
+  .main code,
+  .main pre {
+    font-size: 0.8rem;
+  }
+
+  textarea {
+    font-size: 0.8rem;
+  }
+
+  .main p,
+  .main ol {
+    font-size: 0.9rem;
+  }
+
+  h5 {
+    font-size: 1.0rem;
+  }
+
+  img {
+    height: 150px;
+  }
+}
+
+@media only screen and (min-width: 65em) {
+  .main {
+  flex-direction: row;
   justify-content: space-around;
+  }
+
+  .c1,
+  .c2 {
+    width: 48%;
+  }
+  
+  textarea {
+    height: 100vh;
+  }
+
+  .main code,
+  .main pre {
+    font-size: 0.9rem;
+  }
+
+  textarea {
+    font-size: 0.9rem;
+  }
+
+  .main p,
+  .main ol {
+    font-size: 0.95rem;
+  }
+
+  h5 {
+    font-size: 1.2rem;
+  }
+
+  .main blockquote p {
+    font-size: 1.3rem;
+  }
+  
+  img {
+    height: 100%;
+  }
 }
