--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,9 @@ body {
 h5 {
   font-size: 0.9rem;
   margin: 0;
-  text-align: center;
   border: solid 1px lightgrey;
-  padding: 0.5rem 0;
+  padding: 0.5rem 1rem; 
+  color: DarkGoldenrod;
 }
 
 .main {
